<resources>
    <string name="app_name">HairCutConnect</string>

    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_register">快速注册</string>
    <string name="login_label">用户登录</string>


    <string name="content_hint">Content</string>
    <string name="drawer_hint">Drawer</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
