<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="@dimen/login_margin"
        android:layout_marginBottom="@dimen/login_margin"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_login_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                />

            <ImageView
                android:id="@+id/iv_login_lock"
                android:contentDescription="@string/app_name"
                android:layout_below="@+id/tv_login_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_lock"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_login_account"
                android:layout_below="@+id/iv_login_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_margin"
                android:layout_marginEnd="50dp"
                android:textSize="20sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_primaryColor="@color/colorPrimary"
                app:met_floatingLabelText="@string/login_account"
                app:met_floatingLabel="highlight"
                app:met_clearButton="true"
                android:hint="@string/login_account"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_login_password"
                android:layout_below="@+id/et_login_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_margin"
                android:layout_marginEnd="50dp"
                android:textSize="20sp"
                android:inputType="textPassword"
                app:met_baseColor="@color/colorPrimary"
                app:met_primaryColor="@color/colorPrimary"
                app:met_floatingLabelText="@string/login_password"
                app:met_floatingLabel="highlight"
                app:met_clearButton="true"
                android:hint="@string/login_password"/>

            <TextView
                android:id="@+id/tv_login_forget"
                android:layout_below="@+id/et_login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:layout_marginStart="@dimen/login_margin"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="@dimen/login_margin"
                android:text="@string/login_forget"
                android:textSize="@dimen/login_text"
                android:textColor="@color/colorPrimary"
                />
            <TextView
                android:id="@+id/tv_login_register"
                android:layout_below="@+id/et_login_password"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:layout_marginStart="@dimen/login_margin"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="@dimen/login_margin"
                android:text="@string/login_register"
                android:textSize="@dimen/login_text"
                android:textColor="@color/colorPrimary"
                />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_login_qq"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:fabSize="normal"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/login_margin"
                android:src="@mipmap/login_qq"
                android:clickable="true"
                app:elevation="11dp"
                app:backgroundTint="@color/fab_blue"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_login_wechat"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:fabSize="normal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/login_margin"
                android:src="@mipmap/login_wechat"
                android:clickable="true"
                app:elevation="11dp"
                app:backgroundTint="@color/fab_teal"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_login_weibo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:fabSize="normal"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/login_margin"
                android:src="@mipmap/login_weibo"
                android:clickable="true"
                app:elevation="11dp"
                app:backgroundTint="@color/fab_ambel"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:fabSize="normal"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/login_margin"
        android:layout_marginTop="200dp"
        android:src="@mipmap/right"
        android:clickable="true"
        app:elevation="11dp"
        app:backgroundTint="@color/fab_indigo"
        android:transitionName="intoMainActivity"
        />
</RelativeLayout>
